# mini-app

logi/: Cargo.toml
logi/src/: auth.rs  cli.rs  journal.rs  main.rs  storage.rs  upload.rs
