[package]
name = "logi"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
directories = "5.0"
colored = "2.0"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
open = "5.0"
tiny_http = "0.12"
url = "2.5"